# Softwareentwicklung_Embedded_Systeme

./: CBinarySemaphore.cpp  CBinarySemaphore.h  CCommQueue.cpp  CCommQueue.h  CMakeLists.txt  CMessage.h  CNamedSemaphore.cpp  CNamedSemaphore.h  FWAssertion.h  Global.h  IMessageHandler.h  sync_proc.cpp
SensorTag/: Motion.h  SensorCommunication.cpp  SensorCommunication.h  SensorConfiguration.cpp  SensorConfiguration.h  SensorTag.cpp  SensorTag.h  m_pThread.cpp
